force-app/main/default/objects/Component_History__c/Component_History__c.object-meta.xml
<CustomObject>
    <label>Component History</label>
    <nameField>
        <displayFormat>CH-{000000}</displayFormat>
        <label>Component History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>