force-app/main/default/objects/Component_History__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Impact Analysis Merge</fullName>
            </value>
            <value>
                <fullName>Branch Merge</fullName>
            </value>
            <value>
                <fullName>Edit Component</fullName>
            </value>
            <value>
                <fullName>PreDeploy Fix</fullName>
            </value>
            <value>
                <fullName>Demerge</fullName>
            </value>
            <value>
                <fullName>Search &amp; Replace Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>