force-app/main/default/objects/Component_History__c/fields/Committed_On__c.field-meta.xml
<CustomField>
    <fullName>Committed_On__c</fullName>
    <formula>CreatedDate</formula>
    <label>Committed On</label>
    <type>DateTime</type>
</CustomField>