force-app/main/default/objects/Component_History__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>Component History</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>