force-app/main/default/objects/Component_History__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <formula>if(Comp__r.Name &lt;&gt; &apos;&apos;,Comp__r.Name,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Component Name</label>
    <type>Text</type>
</CustomField>