force-app/main/default/objects/Component_History__c/fields/Crc32__c.field-meta.xml
<CustomField>
    <fullName>Crc32__c</fullName>
    <label>Crc32</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>