force-app/main/default/objects/Component_History__c/fields/External_Committed_By__c.field-meta.xml
<CustomField>
    <fullName>External_Committed_By__c</fullName>
    <label>External Committed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>