force-app/main/default/objects/Component_History__c/fields/isLastVersion__c.field-meta.xml
<CustomField>
    <fullName>isLastVersion__c</fullName>
    <formula>IF( Component__r.Version__c =  Version__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isLastVersion</label>
    <type>Checkbox</type>
</CustomField>