force-app/main/default/objects/Component_History__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Snapshot</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Repository</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>