force-app/main/default/objects/Component_History__c/fields/Version_Name__c.field-meta.xml
<CustomField>
    <fullName>Version_Name__c</fullName>
    <formula>HYPERLINK(&apos;/apex/&apos; + $Setup.Credentials__c.Namespace__c + &apos;viewmetadata?id=&apos; + Id , TEXT(Version__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Version</label>
    <type>Text</type>
</CustomField>